--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "textrazor-sdk",
   "version": "1.0.1",
-  "description": "Fully featured node wrapper for textrazor's REST API",
+  "description": "Fully featured node wrapper for TextRazor's REST API",
   "main": "index.js",
+  "keywords": [
+    "textrazor", "nlp", "text"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/beardyman/textrazor.git"
